--- a/sample01/pom.xml
+++ b/sample01/pom.xml
@@ -2,8 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>zackys.neo4j</groupId>
-  <artifactId>handson01</artifactId>
+  <groupId>zackys.handson.neo4j</groupId>
+  <artifactId>sample01</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
