--- a/sample01/src/main/resources/ogm.properties
+++ b/sample01/src/main/resources/ogm.properties
@@ -1,5 +1,7 @@
-driver=org.neo4j.ogm.drivers.http.driver.HttpDriver
-URI=http://neo4j:password@localhost:7474
+URI=http://localhost:7474
+
+username=neo4j
+password=password
 
 indexes.auto=assert
 
